grammer and spell check

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="section-title" >
           <h2>About Me</h2>
-          <p><b>Hey, there i am a TY-student pursuing Bachelors of Computer Science and Engineering with Specialization in BIG DATA & ANAYLYTICS (Associated with IBM as education partner); Enthusiast from Technology to photography. Apart from Screens I'm interested in  Soccer, travelling, and a foodie.</b></p>
+          <p><b>Hey, there I am a TY-student pursuing Bachelors of Computer Science and Engineering with a Specialization in BIG DATA & ANALYTICS (Associated with IBM as education partner); Enthusiast from Technology to photography. Apart from Screens, I'm interested in Soccer, traveling, and a foodie.</b></p>
         </div>
 
         <div class="row">
