--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="section-title" >
           <h2>About Me</h2>
-          <p><b>Hey, there I am a TY-student pursuing Bachelors of Computer Science and Engineering with a Specialization in BIG DATA & ANALYTICS (Associated with IBM as education partner); Enthusiast from Technology to photography. Apart from Screens, I'm interested in Soccer, traveling, and a foodie.</b></p>
+          <p><b>Hey, there i am a TY-student pursuing Bachelors of Computer Science and Engineering with Specialization in BIG DATA & ANAYLYTICS (Associated with IBM as education partner); Enthusiast from Technology to photography. Apart from Screens I'm interested in  Soccer, travelling, and a foodie.</b></p>
         </div>
 
         <div class="row">
@@ -110,7 +110,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 4 Dec 2000</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.shreypatel4.github.io</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>www.shreypatel4.github.io</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Surat</li>
                 
                 </ul>
@@ -299,7 +299,17 @@
                 </li>
               </ul>
             </div>
-
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Volunteering & Strengths</h3>
+              <div class="resume-item">
+              <h5>All-Time</h5>
+              <em id="gci"> Leadership & In team field working Experience</em>
+                <ul>
+                  <li>Volunteered as Societal Intern at Karma Foundation:Addressing 1500+ individual's daily issues for 15 days at 25+ locations in Ahmedabad. </li> 
+                  <li>Volunteered Cloud Workshop as Google cloud Platform Champ - Quest Leader at "Study-Jam" under GDG Cloud, Ahmedabad.</li>
+                  <li>Volunteered and Co-hosted Workshop as active member at GDG Crowdsource under GDG   developers, Ahmedabad.</li></ul>
+                </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">EDUCATION</h3>
@@ -315,11 +325,22 @@
 
             <div class="resume-item">
               <h4>Projects</h4>
-              <h5>2019-Present</h5>
+              <h5>September-2020</h5>
               <p><em>Automatic Mapping of Sheets - mini projects</em></p>
               <p>Project was based on mapping students result to their respective email-ids on web platform like NPTEL/SWAYAM - hence implemented v-lookup in C#,python & under ASP.NET framework  
-              <b>For More Information and Live Testing of Project please Visit:-<br></b><a href="https://github.com/ganpat-university/ad-2018-project-automatic-mapping-of-sheets" target="blank" title="Project Link">Automatic Mapping of Sheets Project</a></p>
-            </div>
+              <b>For More Information and Live Testing of Project please Visit:-<br></b><a href="https://github.com/ganpat-university/ad-2018-project-automatic-mapping-of-sheets" target="blank" 
+              title="Project Link">Automatic Mapping of Sheets Project</a></p></div>
+
+            <div class="resume-item"> 
+              <h5>April-2021</h5>
+              <p><em>Advanced MOOC Result Scraper (Mini - Project) -</em></p>
+              <p>Project was based on a idea to scrap and save result as ".png" 
+              as well excel files for individual and up to the result for an
+              entire class/batch in one click; Project was build using:
+              Selenium-Webdriver (Chrome), beautiful soup 4, Python 3.8.
+              For More Information ~ please Visit:-<br></b><a href="https://github.com/ShreyPatel4/Advanced-MOOC-Result-Scraper-" target="blank" title="Project Link">MOOC SCRAPPER</a></p>
+
+            </div> 
 
             <div class="resume-item">
               <h4>Achievements</h4>
